Issue #SB-21531 switch to classic theme - the alignment is broken in My download for media type filter

--- a/src/app/client/src/app/modules/content-search/components/global-search-filter/global-search-filter.component.scss
+++ b/src/app/client/src/app/modules/content-search/components/global-search-filter/global-search-filter.component.scss
@@ -2,13 +2,6 @@
 @import "mixins/mixins";
 @import "pages/sbt-filter";
 
-.sb-prominent-filter {
-  .sb-prominent-filter-container.sb-global-search {
-    .sb-prominent-filter-field:nth-child(6) {
-      width: auto;
-    }
-  }
-}
 
 :host ::ng-deep {
   .ui.selection.sbt-dropdown.dropdown .menu>div .item {
